@@ -1,3 +1,10 @@
+2011-11-10	The InnoDB Team
+
+	* handler/ha_innodb.cc, row/row0ins.c, innodb_replace.test:
+	Fix Bug#11759688 52020: InnoDB can still deadlock
+	on just INSERT...ON DUPLICATE KEY a.k.a. the reintroduction of
+	Bug#7975 deadlock without any locking, simple select and update
+
 2011-11-08	The InnoDB Team
 
 	* btr/btr0pcur.c, include/btr0pcur.h, include/btr0pcur.ic:
